nginx-wayae/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-wayae
  labels:
    app: nginx-wayae
  name: nginx-wayae
  namespace: tester
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-wayae
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx-wayae
        version: v1.0.0
      annotations:
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: nginx-wayae
        image: https://hub.docker.com/repository/docker/kurniaakbarialdianza/testerapps:alpha
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
      imagePullSecrets:
      - name: testing-secret
