nginx-wayae/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: nginx-wayae
  name: nginx-wayae
  namespace: tester
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: nginx-wayae
  sessionAffinity: None
  type: NodePort
