nginx-wayae/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels: 
    app: nginx-wayae
  name: nginx-wayae
  namespace: tester
spec:
  rules:
  - host: 
    http:
      paths:
      - backend:
          serviceName: nginx-wayae
          servicePort: 8080
        path: /
